fix button white space

--- a/frontend/src/app/auth/register/register.scss
+++ b/frontend/src/app/auth/register/register.scss
@@ -47,9 +47,11 @@ margin-right: 50px;
     justify-content: center;
     margin-bottom: 10px;
 } 
+
 .button{
      --p-button-lg-padding-x: 8rem;
      --p-button-border-radius: 2rem;
+     white-space: nowrap;
 
 }
 
